styles.css
/* ... */
    .top-bar a{
        color:white;
        color:#FAF8F4;

    }

    #menuja{
        background-color:white;
        background-color: #FAF8F4 !important;
        border-bottom: 0.2px solid black;
width:100%;
z-index:100;
    }

.main-logo{
    height:3rem;
}

.dropdown-lang{
    color:white !important;

}

.dropdown-lang button{
    color:white !important;

}

.navbar-nav{
    gap:2rem;
}


/* Dropdown menu */
.dropdown-menu {
    position: absolute; /* Or fixed if needed */
    z-index: 1040; /* Slightly lower than offcanvas */
    background-color: black;

}


.container-fluid{
    display:flex;
    gap:5rem;
    align-items: center;
    z-index:1000;
}

#cartItemCount{
    color:#fff;
    background-color: rgb(237, 108, 108);
    background-color: #ff9800;
    font-size: 0.9rem;
    font-weight: 600;
}


#cartIcon{
    background-color: rgba(0, 255, 255, 0);
    border:0;
}

.cart{
    order:10;
position:relative;
font-size:1.3rem;
}

/* Offcanvas */
.offcanvas {
    position: fixed; /* Ensures it is above everything */
    z-index: 1090; 
}

.socials{
    display:flex;
    flex-direction: row;
    gap:2rem;
}

.links{
        display:flex;
        flex-direction: row;
        gap:2rem;
    }

    .banner-div{
        position:absolute;
        z-index:9;
        top:40%;
        /* left:25%; */
        color:white;
        color:#FAF8F4;
display:flex;
flex-direction: column;
justify-content: center;
align-items: center;
width:100%;
gap:1rem;
    }

    h1{
        font-family: "Abril Fatface", serif;
        font-weight: 600 !important;
        font-style: normal;
        text-align: center;
        font-size: 6rem !important;
        text-shadow: 
            -1px -1px 0 black, /* Top-left */
            1px -1px 0 black,  /* Top-right */
            -1px 1px 0 black,  /* Bottom-left */
            1px 1px 0 black;   /* Bottom-right */
    }


    .banner-div h2{
        text-shadow: 
        -1px -1px 0 black, /* Top-left */
        1px -1px 0 black,  /* Top-right */
        -1px 1px 0 black,  /* Bottom-left */
        1px 1px 0 black;   /* Bottom-right */
        font-size: 1.5rem !important;
    }



.explore-btn{
    color:white;
    color:#FAF8F4;
    border:2px solid #FAF8F4;

    border-radius:10px;
    background-color: rgba(250, 235, 215, 0);
    padding:1% 3%;
    text-shadow: 
    -0.3px -0.3px 0 black, /* Top-left */
    0.3px -0.3px 0 black,  /* Top-right */
    -0.3px -0.3px 0 black,  /* Bottom-left */
    0.3px 0.3px 0 black;   /* Bottom-right */
margin-top:1rem;
letter-spacing:1px;
font-weight: 500;
            font-weight: 700;
/* THE MAGIC: Glassmorphism */
  background: rgba(255, 255, 255, 0.05); /* Semi-transparent white */
  backdrop-filter: blur(8px); /* Blurs the background */
  -webkit-backdrop-filter: blur(18px); /* Safari support */
  transition: all 0.4s ease;
  /* border: 1px solid rgba(255, 255, 255, 0.1); */
  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
}

.explore-btn:hover{
    background-color: #FAF8F4;

    color:black;
    text-shadow: none;
}
.flag{
    height:0.7rem;
}

.selected-flag {
    margin-right: 0.35rem;
}

ul.dropdown-menu.show{
    width:10%;
}

ul.dropdown-menu.show .dropdown-item{
    width:100%;
}

.content{
    display:flex;
    background-color: #FAF8F4;
    flex-direction: column;
    gap:4rem;
    width:100%;
}

.grid2{
    display:flex;
    flex-direction: column;
    width:100%;
    margin-top:4rem;
    gap:3rem;
}
.grid2-col1{
    display:flex;
    flex-direction: row;
    position:relative;
    padding-top:3rem;
    padding-bottom:3rem;
    gap:3rem;
    align-items: center;
    padding-left:5rem;
    padding-right:5rem;

}
.below-banner{
    width:40%;
    position:relative;

}

.below-banner img{
    position:absolute;
    top:28%;
    height:1.5rem;
    left:20%;
}
.below-banner h2{
    font-size:3.5rem;
    font-weight:600;
    line-height: 5rem;

}




.grid2-cta{
    width:40%;
    display:flex;
    flex-direction: column;
}



.below-banner-p{
    width:100%;
}
.cta-link {
    color: #0557ae; 
    font-weight: bold;
    text-decoration: none;
    width:fit-content;
    border:0;
    padding-left: 0;
    margin-left:0;
  }
  
  .cta-link:hover {
    text-decoration: underline;
  }


.grid2-col2{
    display:flex;
    flex-direction: row; 
    gap:2rem;
    width:100%;
    justify-content: center; 
    margin-top:5rem;
}


.grid2-col2-card{
    position: relative;
    z-index:90;
    width:30%;
}
.grid2-col2-1{
    background-color:#E5E7EB;
    border-radius:25px;
    padding:2rem;
    padding-bottom:3rem;
}
.grid2-col2-1 img {
    margin-top:2rem;
    height:5rem;
}

.enhanced{
    color: #1c4a80;;
}


.lupa-div{
    background-color: #FAF8F4;
    border-radius:25px;
    position:absolute;
    z-index:91;
    bottom:0;
    right:0;
    padding:1rem;
    border-top-right-radius:0;
    border-bottom-left-radius:0;
}
.lupa{
    background-color:#E5E7EB;
    padding:2rem;
    border-radius: 50%;
}


/* COUNTER */

.counter-section{
    margin-top:5rem;
    margin-bottom:2rem;
}
.counter-row{
    display: flex;
    justify-content: center;
    gap:5rem;
    width:100%;
}

.counter-row div{
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
  .counter{
    color: #ff9c04;
    font-size:2.7rem;
  }


  /*   */
/*TESTIMONIALS*/


.testimonials-wrap {
    padding: 3rem 0;
}
.heading-section {
    text-align: center;
}
.sub-heading {
    display: block;
    font-weight: 600;
    color: #155a5e;
    text-transform: uppercase;
    letter-spacing: 2px;
}
.heading-section h2 {
    font-weight: 600;
    padding-top: 1rem;
    padding-bottom: 0.5rem;
}


.testimonial-box {
    position: relative;
    gap:2rem;
    margin-bottom:1rem;
}
.user-img {
    border-radius: 50%;
}

.owl-stage-outer{
    margin-top:2rem;
    margin-bottom:2rem;
}

.owl-carousel .owl-item img{
height:2rem;
}
/* ... */

